# foundationdb-rs

foundationdb/: Cargo.toml
foundationdb-bench/: Cargo.toml
foundationdb-gen/: Cargo.toml
foundationdb-gen/src/: lib.rs
foundationdb-sys/: Cargo.toml
foundationdb/src/: future.rs  network.rs  options.rs
foundationdb/src/tuple/: element.rs
