[package]
name = "foundationdb-bench"
version = "0.1.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/bluejekyll/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "bluejekyll/foundationdb-rs" }


[dependencies]
rand = "*"
futures = "*"
foundationdb = { version = "*", path = "../foundationdb" }
stopwatch = "*"
log = "*"
env_logger = "*"
structopt = "*"

[build-dependencies]
