[package]
name = "foundationdb-sys"
version = "0.1.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]

description = """
Bindings to the C api for FoundationDB
"""

documentation = "https://docs.rs/foundationdb-sys"
repository = "https://github.com/eltorocorp/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "eltorocorp/foundationdb-rs" }
# codecov = { repository = "eltorocorp/foundationdb-rs", branch = "master", service = "github" }


[dependencies]


[build-dependencies]
bindgen = "0.51.0"
